@@ -12,9 +12,9 @@ import java.net.ServerSocket;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -905,7 +905,7 @@ public class HazelcastConfiguration {
         log.debug("Binding Hazelcast to interface {}", networkInterface);
         System.setProperty("hazelcast.local.localAddress", networkInterface);
         System.setProperty("hazelcast.local.publicAddress", networkInterface);
-        config.getNetworkConfig().getInterfaces().setEnabled(true).setInterfaces(Collections.singleton(networkInterface));
+        config.getNetworkConfig().getInterfaces().setEnabled(true).setInterfaces(Set.of(networkInterface));
 
         config.setProperty("hazelcast.socket.bind.any", "false");
         config.setProperty("hazelcast.socket.server.bind.any", "false");
@@ -1372,6 +1372,7 @@ public class HazelcastConfiguration {
         // (a strict 24h would expire entries before the next-day claim).
         config.getMapConfigs().put("atlas-content-change-accumulator",
                 new MapConfig().setBackupCount(artemisProperties.getCache().getHazelcast().getBackupCount()).setTimeToLiveSeconds(48 * 60 * 60));
+        config.getMapConfigs().put("iris-dashboard-schedule-state", new MapConfig().setBackupCount(artemisProperties.getCache().getHazelcast().getBackupCount()));
     }
 
     /**
